--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,16 @@ on:
 jobs:
   build:
     name: Tests
-    runs-on: macos-14
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+
+      - name: Install QEMU and dependencies
+        run: |
+	  sudo apt-get update
+	  sudo apt-get install -y qemu binfmt-support qemu-user-static
+	  docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@4fd812986e6c8c2a69e18311145f9371337f27d4
@@ -25,6 +31,7 @@ jobs:
         uses: docker/build-push-action@1a162644f9a7e87d8f4b053101d1d9a712edc18c
         with:
           context: .
+	  platforms: linux/arm64
           push: false
           load: true
           tags: exercism/test-runner
