--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,24 +14,27 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        uses: actions/checkout@v2
 
       - name: Install QEMU and dependencies
         run: |
-	  sudo apt-get update
-	  sudo apt-get install -y qemu binfmt-support qemu-user-static
-	  docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          sudo apt-get update
+          sudo apt-get install -y qemu binfmt-support qemu-user-static
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@4fd812986e6c8c2a69e18311145f9371337f27d4
+        uses: docker/setup-buildx-action@v1
         with:
           install: true
 
+      - name: Bootstrap Buildx
+        run: docker buildx inspect --bootstrap
+
       - name: Build Docker image and store in cache
-        uses: docker/build-push-action@1a162644f9a7e87d8f4b053101d1d9a712edc18c
+        uses: docker/build-push-action@v2
         with:
           context: .
-	  platforms: linux/arm64
+          platforms: linux/arm64
           push: false
           load: true
           tags: exercism/test-runner
