--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           platforms: linux/arm64
           push: false
           load: true
-          tags: exercism/arm64-assembly-test-runner
+          tags: exercism/test-runner
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
