--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
 
+      - name: Install QEMU and dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu binfmt-support qemu-user-static
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@4fd812986e6c8c2a69e18311145f9371337f27d4
         with:
           install: true
 
+      - name: Bootstrap Buildx
+        run: docker buildx inspect --bootstrap
+
       - name: Build Docker image and store in cache
         uses: docker/build-push-action@1ca370b3a9802c92e886402e0dd88098a2533b12
         with:
           context: .
+          platforms: linux/arm64
           push: false
           load: true
-          tags: exercism/test-runner
+          tags: exercism/arm64-assembly-test-runner
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
