--- a/tests/success/Makefile
+++ b/tests/success/Makefile
@@ -4,7 +4,7 @@ CC = aarch64-linux-gnu-gcc
 CFLAGS = -g -Wall -Wextra -pedantic -Werror
 LDFLAGS =
 
-ALL_LDFLAGS =
+ALL_LDFLAGS = -pie -Wl,--fatal-warnings
 
 ALL_CFLAGS = -std=c99 -fPIE $(CFLAGS)
 ALL_LDFLAGS += $(LDFLAGS)
